# employer_matching

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cursor-build-prompt.md  docker-compose.yml  nlp.md  pyproject.toml  requirements.txt  rubric-scoring-architecture (1).html  rubric-scoring-architecture (2).html  sample_jd.txt  vercel.json
backend/: README.md
backend/agent/: llm.py  weight_auditor.py
backend/api/: server.py  storage.py
backend/db/: __init__.py  jobs.py  sqlite_jobs.py  supabase_jobs.py
backend/scorer/: README.md
backend/seeker/: passport_service.py  resume_scorer.py
docs/: cost-analysis.html  pathcredits_rubric_long.json
docs/api/: jobs.md
docs/plans/: employer-match-phase0.plan
docs/reference/: architecture.html  nace_rubric_long.json  pathcredits_rubric_long.json  rubric-scoring-architecture.html
employer_match/: __init__.py  cli.py  config.py  embedder.py  pipeline.py  rubric_store.py  scorer.py  web_app.py
employer_match/.cache/: rubric_vectors_BAAI_bge-base-en-v1.5_271d0151229629b69ece701c2f99131c.pkl
examples/: sample_jd.txt
frontend/: README.md  config.js  employer.html  index.html  login-employer.html  login-seeker.html  seeker.html  serve.py
jds/: frontend_developer.txt
passport_agent/: seeker_entry.py
scripts/: generate_sample_results.py  generate_supabase_seed.py
supabase/: migration.sql  migration_jobs.sql  migration_v2_jobs.sql  seed.sql
tests/: test_api_server.py  test_cli.py  test_core.py  test_frontend_static.py  test_jobs_store.py  test_rubric_store.py  test_scorer.py  test_web_app.py
(+18 files in other folders)
