[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "employer-match"
version = "0.1.0"
description = "Phase 0 employer JD-to-competency weight scorer for PathCredits."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
[tool.setuptools]
packages = ["employer_match"]
include-package-data = true

[tool.setuptools.package-data]
employer_match = ["data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
